yamls/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector: 
    app: hello-app
  ports:
    - protocol: 'TCP'
      port: 3000      #outside port
      targetPort: 3000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: service-b-cont
          image: gilbenhamo/service-b:latest
